<package format="3">
  <name>roboteq_node_ros2</name>
  <version>0.0.0</version>
  <description>The roboteq_node_ros2 package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_typesupport_interface</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>